2003-10-17  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* include/avr/iom162.h: Change PE[01] to UPE[01]. [Bug #5799]

2003-10-16  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* NEWS: Add note about new vfprintf_P and vfscanf_P functions.
	* include/stdio.h: Add prototypes and dox for vfprintf_P and vfscanf_P.
	* libc/stdio/Makefile.am (lib_a_c_sources): Add vfprintf_p.c and
	vfscanf_p.c.
	* libc/stdio/vfprintf_p.c: New file.
	* libc/stdio/vfscanf_p.c: New file.

2003-10-09  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* README: Change current branch version to 1.1.
	* libc/string/strcat.S: Don't use backtick to quote a C char.
	* libc/string/strcpy.S: Don't use backtick to quote a C char.
	* libc/string/strlen.S: Don't use backtick to quote a C char.
	* libc/string/strtok_r.S: Don't use backtick to quote a C char.

	[Submitted by Steven Borley <steven.borley@diode.demon.co.uk>]
	* libc/string/strsep.S: Don't use backtick to quote a C char.
	Add \fn for function definition dox.
	Exscape '\' char.
	* libc/string/strstr.S: Don't use backtick to quote a C char.
	Add \fn for function definition dox.
	Exscape '\' char.

2003-10-08  Theodore A. Roth  <troth@openavr.org>

	* include/avr/sfr_defs.h: Use inttypes.h defined types to allow use
	with -mint8.
	[Submitted by Tomas Vanek <vanekt@fbl.cz>]

2003-09-30  Theodore A. Roth  <troth@openavr.org>

	* NEWS: Add note about doxygen upgrade.
	* doc/TODO: Updates.

2003-09-30  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* doc/api/dox.css: Add spec for TD.mdRow.

	* doc/api/Makefile.am:
	* doc/api/doxygen.config.in:
	Convert for using doxygen-1.3.4.

	* doc/api/main_page.dox: Add a space after avr-gcc-list URL.

	* doc/api/rel-method.dox:
	* doc/api/sections.dox:
	* doc/api/tools-install.dox:
	* doc/examples/demo/demo.dox:
	* include/setjmp.h: